--- a/video-help/package.json
+++ b/video-help/package.json
@@ -6,6 +6,7 @@
 		"dev": "bun run --hot src/index.ts"
 	},
 	"dependencies": {
+		"@cf-wasm/photon": "^0.2.1",
 		"@types/fluent-ffmpeg": "^2.1.28",
 		"fluent-ffmpeg": "^2.1.3",
 		"hono": "^4.10.4"
