--- a/vercel-image/package.json
+++ b/vercel-image/package.json
@@ -2,7 +2,8 @@
   "name": "hono",
   "type": "module",
   "dependencies": {
-    "hono": "^4.10.5"
+    "hono": "^4.10.5",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
