--- a/cf-proxy/tsconfig.json
+++ b/cf-proxy/tsconfig.json
@@ -3,15 +3,10 @@
 		"target": "ESNext",
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
-		"strict": true,
+		"strict": false,
 		"skipLibCheck": true,
 		"lib": ["ESNext", "DOM"],
 		"jsx": "react-jsx",
-		"jsxImportSource": "hono/jsx",
-		"types": ["cloudflare/workers"],
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["src/*"]
-		}
+		"jsxImportSource": "hono/jsx"
 	}
 }
