--- a/ffmpeg/package.json
+++ b/ffmpeg/package.json
@@ -9,7 +9,8 @@
 		"@cf-wasm/photon": "^0.2.1",
 		"@types/fluent-ffmpeg": "^2.1.28",
 		"fluent-ffmpeg": "^2.1.3",
-		"hono": "^4.10.4"
+		"hono": "^4.10.4",
+		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
 		"@types/bun": "latest"
