--- a/ffmpeg/package.json
+++ b/ffmpeg/package.json
@@ -2,6 +2,7 @@
 	"name": "media-helper",
 	"version": "1.0.0",
 	"type": "module",
+	"packageManager": "bun@1.1.1",
 	"scripts": {
 		"dev": "bun run --hot src/index.ts"
 	},
