--- a/ffmpeg/package.json
+++ b/ffmpeg/package.json
@@ -2,7 +2,7 @@
 	"name": "media-helper",
 	"version": "1.0.0",
 	"type": "module",
-	"packageManager": "bun@1.1.1",
+	"packageManager": "pnpm@9.1.0",
 	"scripts": {
 		"dev": "bun run --hot src/index.ts"
 	},
