--- a/fff/package.json
+++ b/fff/package.json
@@ -9,7 +9,8 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.6",
-		"hono": "^4.10.6"
+		"hono": "^4.10.6",
+		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.17",
