--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "my-app",
-  "type": "module",
-  "scripts": {
-    "build": "js-compute-runtime ./src/index.ts ./bin/main.wasm",
-    "start": "fastly compute serve",
-    "deploy": "fastly compute publish"
-  },
-  "dependencies": {
-    "@fastly/hono-fastly-compute": "^0.3.6",
-    "@fastly/js-compute": "^3.35.1",
-    "hono": "^4.10.5"
-  },
-  "devDependencies": {
-    "@fastly/cli": "^12.0.0"
-  }
+	"name": "my-app",
+	"type": "module",
+	"scripts": {
+		"build": "node esbuild.config.js && js-compute-runtime ./dist/index.js ./bin/main.wasm",
+		"build1": "js-compute-runtime ./src/index.ts ./bin/main.wasm",
+		"start": "fastly compute serve",
+		"deploy": "fastly compute publish"
+	},
+	"dependencies": {
+		"@cf-wasm/photon": "^0.2.2",
+		"@fastly/hono-fastly-compute": "^0.3.6",
+		"@fastly/js-compute": "^3.35.2",
+		"hono": "^4.10.5"
+	},
+	"devDependencies": {
+		"@fastly/cli": "^12.0.0",
+		"esbuild": "^0.21.0"
+	}
 }
