--- a/vercel-image/package.json
+++ b/vercel-image/package.json
@@ -2,6 +2,7 @@
   "name": "hono",
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.932.0",
     "hono": "^4.10.5",
     "sharp": "^0.34.5"
   },
